fixed another button contrast concern

--- a/app/globals.css
+++ b/app/globals.css
@@ -490,7 +490,7 @@ kbd {
 }
 
 .site-header__link--sign-up {
-  background-color: #4788e9;
+  background-color: #186ae6;
   border: none;
   color: white;
 }
